--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -18,4 +18,22 @@
 		<item>240</item>
 		<item>480</item>
 	</string-array>
+	<string-array name="vibrate_patt_entries">
+		<item>One Buzz</item>
+		<item>Two Shakes</item>
+		<item>Faster</item>
+		<item>Slower</item>
+		<item>Two Long Three Short</item>
+		<item>Shave and a Haircut</item>
+		<item>Final Fantasy</item>
+	</string-array>
+	<string-array name="vibrate_patt_values">
+		<item>0,150</item>
+		<item>0,250,250,250</item>
+		<item>0,50,50,100,100,150,150,200</item>
+		<item>0,200,200,150,150,100,100,50</item>
+		<item>0,250,200,250,150,150,75,150,75,150</item>
+		<item>0,100,200,100,100,100,100,100,200,100,500,100,225,100</item>
+		<item>0,50,100,50,100,50,100,400,100,300,100,350,50,200,100,100,50,600</item>
+	</string-array>
 </resources>
