--- a/res/layout/dialog_confirm_activation.xml
+++ b/res/layout/dialog_confirm_activation.xml
@@ -1,18 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<TextView
-	android:id="@+id/text01"
-	android:background="#ffffff"
-	android:textColor="#000000"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"
-	android:text="@string/register_activation"/>
-	<Button
-	android:id="@+id/close"
-	style="@style/FillWidth"
-	android:layout_below="@id/text01"
-	android:text="Close"/>
-</RelativeLayout>
+<TextView
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:textColor="#000000"
+android:text="@string/register_activation"/>
