--- a/res/layout/dialog_confirm_register.xml
+++ b/res/layout/dialog_confirm_register.xml
@@ -1,57 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout
+	<TextView
 	android:id="@+id/layout01"
-	style="@style/FillWidth"
-	android:background="#ffffff"
-	android:orientation="vertical"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp">
-		<TextView
-		android:textColor="#000000"
-		android:text="@string/register_confirm"/>
-		<TableLayout
-		android:layout_marginTop="6dp"
-		android:layout_gravity="center"
-		android:shrinkColumns="*">
-			<TableRow>
-				<TextView
-				android:layout_gravity="right"
-				android:paddingRight="12dp"
-				android:textColor="#000000"
-				android:text="User Name:"/>
-				<TextView
-				android:id="@+id/username"
-				android:textColor="#000000"/>
-			</TableRow>
-			<TableRow>
-				<TextView
-				android:layout_gravity="right"
-				android:paddingRight="12dp"
-				android:textColor="#000000"
-				android:text="Email:"/>
-				<TextView
-				android:id="@+id/email"
-				android:textColor="#000000"/>
-			</TableRow>
-		</TableLayout>
-	</LinearLayout>
-	<TableRow
-	style="@style/FillWidth"
+	android:textColor="#000000"
+	android:text="@string/register_confirm"/>
+	<TableLayout
 	android:layout_below="@id/layout01"
-	android:layout_marginTop="6dp">
-		<Button
-		android:id="@+id/cancel"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Cancel"/>
-		<Button
-		android:id="@+id/ok"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Register"/>
-	</TableRow>
-</RelativeLayout>
+	android:layout_marginTop="6dp"
+	android:layout_centerHorizontal="true"
+	android:shrinkColumns="*">
+		<TableRow>
+			<TextView
+			android:layout_gravity="right"
+			android:paddingRight="12dp"
+			android:textColor="#000000"
+			android:text="User Name:"/>
+			<TextView
+			android:id="@+id/username"
+			android:textColor="#000000"/>
+		</TableRow>
+		<TableRow>
+			<TextView
+			android:layout_gravity="right"
+			android:paddingRight="12dp"
+			android:textColor="#000000"
+			android:text="Email:"/>
+			<TextView
+			android:id="@+id/email"
+			android:textColor="#000000"/>
+		</TableRow>
+	</TableLayout>
+</merge>
