--- a/res/layout/dialog_confirm_rematch.xml
+++ b/res/layout/dialog_confirm_rematch.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/rematch_confirm"
-	style="@style/FillWidth"
-	android:textColor="#000000"
-	android:background="#ffffff"
-	android:paddingTop="12dp"
-	android:paddingBottom="6dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"/>
+	android:textColor="#000000"/>
 	<TableLayout
-	android:id="@+id/layout01"
 	android:layout_below="@id/rematch_confirm"
-	android:background="#ffffff"
-	android:paddingTop="6dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"
+	android:layout_centerHorizontal="true"
 	android:shrinkColumns="*"
 	android:stretchColumns="1">
 		<TableRow>
@@ -39,19 +28,4 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			android:id="@+id/color"/>
 		</TableRow>
 	</TableLayout>
-	<TableRow
-	style="@style/FillWidth"
-	android:layout_below="@id/layout01"
-	android:layout_marginTop="6dp">
-		<Button
-		android:id="@+id/cancel"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Cancel"/>
-		<Button
-		android:id="@+id/ok"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Rematch"/>
-	</TableRow>
-</RelativeLayout>
+</merge>
