--- a/res/layout/dialog_cputime.xml
+++ b/res/layout/dialog_cputime.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout
+	<TextView
 	android:id="@+id/layout01"
-	style="@style/FillWidth"
-	android:background="#ffffff"
-	android:orientation="vertical"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp">
-		<TextView
-		android:textColor="#000000"
-		android:text="@string/cputime_msg"/>
-		<TableRow
-		android:paddingTop="6dp"
-		android:layout_gravity="center"
-		android:shrinkColumns="*">
-			<com.chess.genesis.NumberSpinner
-			android:id="@+id/time"
-			android:layout_width="72dp"/>
-			<TextView
-			android:textSize="18dp"
-			android:layout_marginLeft="6dp"
-			android:textColor="#000000"
-			android:layout_gravity="center"
-			android:gravity="center"
-			android:text="Seconds"/>
-		</TableRow>
-	</LinearLayout>
+	android:textColor="#000000"
+	android:text="@string/cputime_msg"/>
 	<TableRow
-	style="@style/FillWidth"
+	android:paddingTop="6dp"
 	android:layout_below="@id/layout01"
-	android:layout_marginTop="6dp">
-		<Button
-		android:id="@+id/cancel"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Cancel"/>
-		<Button
-		android:id="@+id/ok"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Set Time"/>
+	android:layout_centerHorizontal="true"
+	android:shrinkColumns="*">
+		<com.chess.genesis.NumberSpinner
+		android:id="@+id/time"
+		android:layout_width="72dp"/>
+		<TextView
+		android:textSize="18dp"
+		android:layout_marginLeft="6dp"
+		android:textColor="#000000"
+		android:layout_gravity="center"
+		android:gravity="center"
+		android:text="Seconds"/>
 	</TableRow>
-</RelativeLayout>
+</merge>
