--- a/res/layout/dialog_delete_archive.xml
+++ b/res/layout/dialog_delete_archive.xml
@@ -1,31 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<TableRow
-	android:id="@+id/layout01"
-	style="@style/FillWidth"
-	android:background="#ffffff"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp">
-		<TextView
-		android:textColor="#000000"
-		android:text="@string/delete_archive"/>
-	</TableRow>
-	<TableRow
-	style="@style/FillWidth"
-	android:layout_below="@id/layout01"
-	android:layout_marginTop="6dp">
-		<Button
-		android:id="@+id/cancel"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Cancel"/>
-		<Button
-		android:id="@+id/ok"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Delete"/>
-	</TableRow>
-</RelativeLayout>
+<TextView
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:textColor="#000000"
+android:text="@string/delete_archive"/>
