--- a/res/layout/dialog_endgame.xml
+++ b/res/layout/dialog_endgame.xml
@@ -1,45 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<TableLayout
-	android:id="@+id/layout01"
-	android:shrinkColumns="*"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"
-	android:layout_centerHorizontal="true">
-		<TableRow
-		android:layout_margin="2dp">
-			<TextView
-			android:layout_gravity="right"
-			android:layout_marginRight="12dp"
-			android:text="Oppenent :"/>
-			<TextView
-			android:id="@+id/opponent"/>
-		</TableRow>
-		<TableRow
-		android:layout_margin="2dp">
-			<TextView
-			android:layout_gravity="right"
-			android:layout_marginRight="12dp"
-			android:text="Result :"/>
-			<TextView
-			android:id="@+id/result"/>
-		</TableRow>
-		<TableRow
-		android:layout_margin="2dp">
-			<TextView
-			android:id="@+id/psr_type"
-			android:layout_gravity="right"
-			android:layout_marginRight="12dp"/>
-			<TextView
-			android:id="@+id/psr_score"/>
-		</TableRow>
-	</TableLayout>
-	<Button
-	android:id="@+id/close"
-	android:layout_below="@id/layout01"
-	style="@style/FillWidth"
-	android:layout_marginTop="6dp"
-	android:text="Close"/>
-</RelativeLayout>
+<TableLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:shrinkColumns="*"
+android:layout_centerHorizontal="true">
+	<TableRow
+	android:layout_margin="2dp">
+		<TextView
+		android:layout_gravity="right"
+		android:layout_marginRight="12dp"
+		android:text="Oppenent :"/>
+		<TextView
+		android:id="@+id/opponent"/>
+	</TableRow>
+	<TableRow
+	android:layout_margin="2dp">
+		<TextView
+		android:layout_gravity="right"
+		android:layout_marginRight="12dp"
+		android:text="Result :"/>
+		<TextView
+		android:id="@+id/result"/>
+	</TableRow>
+	<TableRow
+	android:layout_margin="2dp">
+		<TextView
+		android:id="@+id/psr_type"
+		android:layout_gravity="right"
+		android:layout_marginRight="12dp"/>
+		<TextView
+		android:id="@+id/psr_score"/>
+	</TableRow>
+</TableLayout>
