--- a/res/layout/dialog_gamepool.xml
+++ b/res/layout/dialog_gamepool.xml
@@ -1,44 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout
+	<TextView
+	android:id="@+id/text01"
+	android:textColor="#ff000000"
+	android:text="@string/gamepool_info"/>
+	<TableLayout
 	android:id="@+id/layout01"
 	style="@style/FillWidth"
-	android:background="#ffffff"
-	android:orientation="vertical"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp">
-		<TextView
-		android:textColor="#ff000000"
-		android:text="@string/gamepool_info"/>
-		<TableLayout
-		android:id="@+id/layout02"
-		style="@style/FillWidth"
-		android:layout_marginTop="6dp"
-		android:paddingLeft="32dp"
-		android:layout_gravity="center"
-		android:shrinkColumns="*"
-		android:stretchColumns="*">
-			<TableRow>
-				<TextView
-				android:id="@+id/left"
-				android:textColor="#ff000000"
-				android:textStyle="bold"
-				android:text="Game Type"/>
-				<TextView
-				android:id="@+id/right"
-				android:textColor="#ff000000"
-				android:textStyle="bold"
-				android:text="Time Submitted"/>
-			</TableRow>
-		</TableLayout>
-	</LinearLayout>
-	<Button
-	android:id="@+id/close"
-	android:layout_below="@id/layout01"
-	style="@style/FillWidth"
+	android:layout_below="@id/text01"
 	android:layout_marginTop="6dp"
-	android:text="Close"/>
-</RelativeLayout>
+	android:paddingLeft="32dp"
+	android:layout_gravity="center"
+	android:shrinkColumns="*"
+	android:stretchColumns="*">
+		<TableRow>
+			<TextView
+			android:id="@+id/left"
+			android:textColor="#ff000000"
+			android:textStyle="bold"
+			android:text="Game Type"/>
+			<TextView
+			android:id="@+id/right"
+			android:textColor="#ff000000"
+			android:textStyle="bold"
+			android:text="Time Submitted"/>
+		</TableRow>
+	</TableLayout>
+</merge>
