--- a/res/layout/dialog_newgame_invite.xml
+++ b/res/layout/dialog_newgame_invite.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<TableLayout
-	android:id="@+id/layout01"
-	android:background="#ffffff"
-	android:paddingTop="12dp"
-	android:paddingBottom="12dp"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"
-	android:shrinkColumns="*"
-	android:stretchColumns="1">
-		<TableRow>
-			<TextView
-			android:layout_gravity="right|center_vertical"
-			android:paddingRight="6dp"
-			android:textColor="#000000"
-			android:text="User Name:"/>
-			<EditText
-			android:id="@+id/opp_name"/>
-		</TableRow>
-		<TableRow>
-			<TextView
-			android:layout_gravity="right|center_vertical"
-			android:paddingRight="6dp"
-			android:textColor="#000000"
-			android:text="Your Color:"/>
-			<Spinner
-			android:id="@+id/invite_color"/>
-		</TableRow>
-	</TableLayout>
-	<TableRow
-	style="@style/FillWidth"
-	android:layout_below="@id/layout01"
-	android:paddingTop="6dp">
-		<Button
-		android:id="@+id/cancel"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Cancel"/>
-		<Button
-		android:id="@+id/ok"
-		style="@style/FillWidth"
-		android:layout_weight="50"
-		android:text="Submit"/>
+<TableLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:shrinkColumns="*"
+android:stretchColumns="1">
+	<TableRow>
+		<TextView
+		android:layout_gravity="right|center_vertical"
+		android:paddingRight="6dp"
+		android:textColor="#000000"
+		android:text="User Name:"/>
+		<EditText
+		android:id="@+id/opp_name"/>
 	</TableRow>
-</RelativeLayout>
+	<TableRow>
+		<TextView
+		android:layout_gravity="right|center_vertical"
+		android:paddingRight="6dp"
+		android:textColor="#000000"
+		android:text="Your Color:"/>
+		<Spinner
+		android:id="@+id/invite_color"/>
+	</TableRow>
+</TableLayout>
