--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -6,7 +6,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	style="@style/FillWidth"
 	android:src="@drawable/topbar"/>
 
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/username_header"
 	android:layout_below="@id/topbar"
 	android:layout_alignParentLeft="true"
@@ -14,7 +14,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_marginLeft="14dp"
 	android:textSize="15dp"
 	android:text="User Name"/>
-	<EditText
+	<com.chess.genesis.RobotoEditText
 	android:id="@+id/username"
 	style="@style/FillWidth"
 	android:layout_below="@id/username_header"
@@ -24,14 +24,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:singleLine="true"
 	android:maxLength="16"/>
 
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/password_header"
 	android:layout_below="@id/username"
 	android:layout_alignParentLeft="true"
 	android:layout_marginLeft="14dp"
 	android:textSize="15dp"
 	android:text="Password"/>
-	<EditText
+	<com.chess.genesis.RobotoEditText
 	android:id="@+id/password"
 	style="@style/FillWidth"
 	android:layout_below="@id/password_header"
@@ -41,14 +41,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:singleLine="true"
 	android:maxLength="22"/>
 
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/password2_header"
 	android:layout_below="@id/password"
 	android:layout_alignParentLeft="true"
 	android:layout_marginLeft="14dp"
 	android:textSize="15dp"
 	android:text="Password"/>
-	<EditText
+	<com.chess.genesis.RobotoEditText
 	android:id="@+id/password2"
 	style="@style/FillWidth"
 	android:layout_below="@id/password2_header"
@@ -58,14 +58,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:singleLine="true"
 	android:maxLength="22"/>
 
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/email_header"
 	android:layout_below="@id/password2"
 	android:layout_alignParentLeft="true"
 	android:layout_marginLeft="14dp"
 	android:textSize="15dp"
 	android:text="Email"/>
-	<EditText
+	<com.chess.genesis.RobotoEditText
 	android:id="@+id/email"
 	style="@style/FillWidth"
 	android:layout_below="@id/email_header"
@@ -84,7 +84,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingRight="15dp"
 	android:src="@drawable/rsubmit"/>
 
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
 	android:layout_marginLeft="6dp"
