--- a/res/layout/activity_gamelist_online.xml
+++ b/res/layout/activity_gamelist_online.xml
@@ -18,7 +18,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/layout02"
 	style="@style/FillWidth"
 	android:layout_below="@id/layout01">
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:id="@+id/game_search"
 		style="@style/FillWidth"
 		android:padding="4dp"
