--- a/res/layout/activity_mainmenu.xml
+++ b/res/layout/activity_mainmenu.xml
@@ -5,7 +5,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/topbar"
 	style="@style/FillWidth"
 	android:src="@drawable/topbar"/>
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/welcome"
 	android:layout_below="@id/topbar"
 	android:paddingLeft="6dp"
@@ -59,14 +59,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:padding="3dp"
 		android:src="@drawable/googleplus"/>
 	</TableRow>
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/beta"
 	android:layout_above="@id/layout01"
 	android:layout_alignParentRight="true"
 	android:paddingRight="3dp"
 	android:textSize="10dp"
 	android:text="Beta"/>
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:layout_above="@id/layout01"
 	android:layout_toLeftOf="@id/beta"
 	android:paddingRight="3dp"
