--- a/res/layout/dialog_endgame.xml
+++ b/res/layout/dialog_endgame.xml
@@ -5,29 +5,29 @@ android:shrinkColumns="*"
 android:layout_centerHorizontal="true">
 	<TableRow
 	android:layout_margin="2dp">
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"
 		android:text="Oppenent :"/>
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:id="@+id/opponent"/>
 	</TableRow>
 	<TableRow
 	android:layout_margin="2dp">
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"
 		android:text="Result :"/>
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:id="@+id/result"/>
 	</TableRow>
 	<TableRow
 	android:layout_margin="2dp">
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:id="@+id/psr_type"
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"/>
-		<TextView
+		<com.chess.genesis.RobotoText
 		android:id="@+id/psr_score"/>
 	</TableRow>
 </TableLayout>
