--- a/res/layout/dialog_rename_game.xml
+++ b/res/layout/dialog_rename_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<EditText
+<com.chess.genesis.RobotoEditText
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/game_name_input"
 style="@style/FillWidth"
