--- a/res/layout/gamelist_cell_empty.xml
+++ b/res/layout/gamelist_cell_empty.xml
@@ -2,13 +2,13 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 style="@style/FillBoth">
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/nogames"
 	android:layout_centerInParent="true"
 	android:textStyle="bold"
 	android:textSize="24dp"
 	android:text="No Games"/>
-	<TextView
+	<com.chess.genesis.RobotoText
 	android:id="@+id/message"
 	android:layout_centerHorizontal="true"
 	android:layout_below="@id/nogames"
