--- a/res/layout/spinner_dropdown.xml
+++ b/res/layout/spinner_dropdown.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<com.chess.genesis.RobotoText
 xmlns:android="http://schemas.android.com/apk/res/android"
 style="?android:attr/spinnerDropDownItemStyle"
 android:layout_height="?android:attr/listPreferredItemHeight"
