--- a/res/layout/swipetab_indicator.xml
+++ b/res/layout/swipetab_indicator.xml
@@ -18,7 +18,7 @@
 	limitations under the License.
 -->
   
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chess.genesis.RobotoText xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/swipe_tab"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
