add nudge and idle resign feature to gameboard and gamelist classes
The gamelist now shows ([idle],[nudged],[close]) when the game is
in that state. Games can be nudged from the gamelist.

The Resign option menu for the gameboard has now become Resign/Nudge.
You can only resign on your turn and nudge/close on the opponents.

--- a/res/layout/gamelist_cell_online.xml
+++ b/res/layout/gamelist_cell_online.xml
@@ -33,4 +33,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_marginRight="6dp"
 	android:textColor="#4e9a06"
 	android:textSize="14dp"/>
+	<com.chess.genesis.RobotoText
+	android:id="@+id/idle"
+	android:layout_toLeftOf="@id/new_msgs"
+	android:layout_alignParentTop="true"
+	android:textColor="#3465a4"
+	android:textSize="14dp"/>
 </RelativeLayout>
