add viewAsBlack preference to load the board from black's view
The viewAsBlack preference, which defaults on, makes the board load
from black's view point if the user is playing black. For local games
where the CPU is white, and online games when the user is black.
For genesis chess there is never any view change, only regular.

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -4,6 +4,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<PreferenceCategory
 	android:title="Game Settings">
 		<CheckBoxPreference
+		android:key="viewAsBlack"
+		android:defaultValue="true"
+		android:title="View As Black"
+		android:summary="View as black when playing black"/>
+		<CheckBoxPreference
 		android:key="screenAlwaysOn"
 		android:defaultValue="false"
 		android:title="Keep Screen Active"
