--- a/res/layout/activity_game_local.xml
+++ b/res/layout/activity_game_local.xml
@@ -28,9 +28,13 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.ViewFlip3D
 	android:id="@+id/board_flip"
 	android:layout_below="@id/layout01">
-		<com.chess.genesis.BoardLayout
-		android:id="@+id/board_layout"
-		android:layout_gravity="top|center_horizontal"/>
+		<FrameLayout
+		style="@style/FillWidth"
+		android:background="#ff00b7eb">
+			<com.chess.genesis.BoardLayout
+			android:id="@+id/board_layout"
+			android:layout_gravity="top|center_horizontal"/>
+		</FrameLayout>
 		<com.chess.genesis.PlaceLayout
 		android:id="@+id/place_layout"
 		android:layout_gravity="top|center_horizontal"/>
