--- a/res/layout/framelayout_boardbutton.xml
+++ b/res/layout/framelayout_boardbutton.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<merge
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.MyImageView
 	android:id="@+id/board_layer"/>
@@ -9,4 +9,4 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.MyImageView
 	android:id="@+id/piece_layer"
 	android:src="@drawable/square_none"/>
-</FrameLayout>
+</merge>
