--- a/res/layout/swipetab_fragment.xml
+++ b/res/layout/swipetab_fragment.xml
@@ -18,7 +18,7 @@
 	limitations under the License.
 -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
 	<com.chess.genesis.RobotoText
@@ -26,4 +26,4 @@ android:layout_height="fill_parent">
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:layout_gravity="center"/>
-</FrameLayout>
+</merge>
