use <include/> in layout xml files to reduce xml code size
Many of the layout files have duplicate code. The duplicate code
can be moved to a new file and refferenced using the <include/> tag.

--- a/res/layout/activity_game_online.xml
+++ b/res/layout/activity_game_online.xml
@@ -14,61 +14,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_weight="408"
 		android:src="@drawable/chat"/>
 	</TableRow>
-	<TableRow
-	android:id="@+id/layout02"
-	style="@style/FillWidth"
+	<include
+	layout="@layout/include_board_names"
 	android:layout_below="@id/layout01"
-	android:background="#ff383838">
-		<com.chess.genesis.TabText
-		android:id="@+id/white_name"
-		style="@style/FillWidth"
-		android:gravity="center"
-		android:padding="6dp"
-		android:textSize="14dp"
-		android:layout_weight="50"/>
-		<com.chess.genesis.TabText
-		android:id="@+id/black_name"
-		style="@style/FillWidth"
-		android:gravity="center"
-		android:padding="6dp"
-		android:textSize="14dp"
-		android:layout_weight="50"/>
-	</TableRow>
-	<com.chess.genesis.ViewFlip3D
-	android:id="@+id/board_flip"
-	android:layout_below="@id/layout02">
-		<FrameLayout
-		style="@style/FillWidth"
-		android:background="#ff00b7eb">
-			<com.chess.genesis.BoardLayout
-			android:id="@+id/board_layout"
-			android:layout_gravity="top|center_horizontal"/>
-		</FrameLayout>
-		<com.chess.genesis.PlaceLayout
-		android:id="@+id/place_layout"
-		android:layout_gravity="top|center_horizontal"/>
-	</com.chess.genesis.ViewFlip3D>
-	<TableRow
-	android:layout_alignParentBottom="true">
-		<com.chess.genesis.MyImageView
-		android:id="@+id/place_piece"
-		style="@style/FillWidth"
-		android:layout_weight="243"
-		android:src="@drawable/place_piece"/>
-		<com.chess.genesis.MyImageView
-		android:id="@+id/backwards"
-		style="@style/FillWidth"
-		android:layout_weight="398"
-		android:src="@drawable/backwards"/>
-		<com.chess.genesis.MyImageView
-		android:id="@+id/forwards"
-		style="@style/FillWidth"
-		android:layout_weight="398"
-		android:src="@drawable/forwards"/>
-		<com.chess.genesis.MyImageView
-		android:id="@+id/current"
-		style="@style/FillWidth"
-		android:layout_weight="398"
-		android:src="@drawable/current"/>
-	</TableRow>
+	style="@style/FillWidth"/>
+	<include
+	layout="@layout/include_board_layout"
+	android:layout_below="@+id/board_names"/>
+	<include
+	layout="@layout/include_board_nav"
+	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
