--- a/res/layout/activity_msgbox.xml
+++ b/res/layout/activity_msgbox.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.MyImageView
-	android:id="@+id/topbar"
-	style="@style/FillWidth"
-	android:src="@drawable/topbar"/>
+	<include
+	layout="@layout/include_topbar"/>
 	<ListView
 	android:id="@+id/msg_list"
 	android:layout_below="@id/topbar"
@@ -27,8 +25,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_gravity="center"
 		android:src="@drawable/rsubmit"/>
 	</TableRow>
-	<com.chess.genesis.MyImageView
-	android:id="@+id/botbar"
-	android:layout_alignParentBottom="true"
-	android:src="@drawable/botbar"/>
+	<include
+	layout="@layout/include_botbar"
+	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
