--- a/res/layout/activity_gamelist_local.xml
+++ b/res/layout/activity_gamelist_local.xml
@@ -1,27 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<TableRow
-	android:id="@+id/layout01">
-		<com.chess.genesis.MyImageView
-		android:id="@+id/topbar_genesis"
-		style="@style/FillWidth"
-		android:layout_weight="82"
-		android:src="@drawable/topbar_genesis"/>
-		<com.chess.genesis.MyImageView
-		android:id="@+id/topbar_plus"
-		style="@style/FillWidth"
-		android:layout_weight="408"
-		android:src="@drawable/topbar_plus"/>
-	</TableRow>
+	<include
+	layout="@layout/include_topbar_plus"/>
 	<ListView
 	android:id="@+id/game_list"
 	style="@style/FillBoth"
-	android:layout_below="@id/layout01"
-	android:layout_above="@id/botbar"/>
-	<com.chess.genesis.MyImageView
-	android:id="@+id/botbar"
-	style="@style/FillWidth"
-	android:layout_alignParentBottom="true"
-	android:src="@drawable/botbar"/>
+	android:layout_below="@+id/topbar_and_plus"
+	android:layout_above="@+id/botbar"/>
+	<include
+	layout="@layout/include_botbar"
+	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
