--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.MyImageView
-	android:id="@+id/topbar"
-	style="@style/FillWidth"
-	android:src="@drawable/topbar"/>
-
+	<include
+	layout="@layout/include_topbar"/>
 	<com.chess.genesis.RobotoText
 	android:id="@+id/username_header"
 	android:layout_below="@id/topbar"
@@ -23,7 +20,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:inputType="textCapWords"
 	android:singleLine="true"
 	android:maxLength="16"/>
-
 	<com.chess.genesis.RobotoText
 	android:id="@+id/password_header"
 	android:layout_below="@id/username"
@@ -40,7 +36,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:inputType="textPassword"
 	android:singleLine="true"
 	android:maxLength="22"/>
-
 	<com.chess.genesis.MyImageView
 	android:id="@+id/login"
 	android:layout_width="120dp"
@@ -57,9 +52,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingRight="15dp"
 	android:layout_margin="8dp"
 	android:src="@drawable/register"/>
-	<com.chess.genesis.MyImageView
-	android:id="@+id/botbar"
-	style="@style/FillWidth"
-	android:layout_alignParentBottom="true"
-	android:src="@drawable/botbar"/>
+	<include
+	layout="@layout/include_botbar"
+	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
