reduce the use of onTouch for image buttons by using xml drawables
Use an xml file for the drawable of all custom image buttons that
switch between two images on touch. The following is an example of
the xml drawable for the backwards image button:

<?xml version="1.0" encoding="utf-8"?>
<selector xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:drawable="@drawable/backwards_pressed" android:state_pressed="true"/>
	<item android:drawable="@drawable/backwards"/>
</selector>

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -43,7 +43,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_alignParentRight="true"
 	android:layout_margin="3dp"
 	android:paddingRight="15dp"
-	android:src="@drawable/login"/>
+	android:src="@drawable/btn_login"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/register"
 	android:layout_width="120dp"
@@ -51,7 +51,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_alignParentRight="true"
 	android:paddingRight="15dp"
 	android:layout_margin="8dp"
-	android:src="@drawable/register"/>
+	android:src="@drawable/btn_register"/>
 	<include
 	layout="@layout/include_botbar"
 	android:layout_alignParentBottom="true"/>
