--- a/res/layout/activity_game_online.xml
+++ b/res/layout/activity_game_online.xml
@@ -7,12 +7,12 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:id="@+id/topbar_genesis"
 		style="@style/FillWidth"
 		android:layout_weight="82"
-		android:src="@drawable/topbar_genesis"/>
+		android:src="@drawable/btn_topbar_genesis"/>
 		<com.chess.genesis.MyImageView
 		android:id="@+id/chat"
 		style="@style/FillWidth"
 		android:layout_weight="408"
-		android:src="@drawable/chat"/>
+		android:src="@drawable/btn_chat"/>
 	</TableRow>
 	<include
 	layout="@layout/include_board_names"
