--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -75,7 +75,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_alignParentRight="true"
 	android:layout_margin="3dp"
 	android:paddingRight="15dp"
-	android:src="@drawable/rsubmit"/>
+	android:src="@drawable/btn_rsubmit"/>
 	<com.chess.genesis.RobotoText
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
