add GameDetails dialogs to Game Activities
OnlineGameDetails and LocalGameDetails shows the information about
the game that's stored in the database. LocalGameDetails also allows
the information to be saved to a file on the SD card.

--- a/res/menu/options_game_online.xml
+++ b/res/menu/options_game_online.xml
@@ -11,6 +11,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/nudge_resign"
 	android:title="Nudge/Resign"/>
 	<item
-	android:id="@+id/chat"
-	android:title="Chat"/>
+	android:id="@+id/online_details"
+	android:title="Game Details"/>
 </menu>
