--- a/res/menu/options_game_archive.xml
+++ b/res/menu/options_game_archive.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/rematch"
 	android:title="Rematch Opponent"/>
+	<item
+	android:id="@+id/online_details"
+	android:title="Game Details"/>
 </menu>
