--- a/res/menu/options_game_local.xml
+++ b/res/menu/options_game_local.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/cpu_time"
 	android:title="Set CPU Time"/>
+	<item
+	android:id="@+id/local_details"
+	android:title="Game Details"/>
 </menu>
