--- a/res/menu/context_gamelist_local.xml
+++ b/res/menu/context_gamelist_local.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/rename_game"
 	android:title="Rename Game" />
+	<item
+	android:id="@+id/share_game"
+	android:title="Share Game" />
 </menu>
