add export to file for OnlineGameDetails and Share to OnlineGameList
OnlineGameDetails should have the same option to export a game.
GameParser was updated to work with the different fields in an online game.

--- a/res/menu/context_gamelist_online_nudge.xml
+++ b/res/menu/context_gamelist_online_nudge.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/nudge"
 	android:title="Nudge" />
+	<item
+	android:id="@+id/share_game"
+	android:title="Share Game" />
 </menu>
